# MediaCabFanControl

./: .gitignore  .gitmodules  CMakeLists.txt  FanControl.ino  I2C.h  LICENSE.md  MAX6651.h  MediaCabFanControl.ino  PIDEnhanced.h  PWM.h  README.md  Temperature.h  TinyWebServer.cpp  TinyWebServer.h  Utilities.h  WifiControl.h  Zone.h  aREST.h  ota.py  partitions.csv  partitions_two_ota.csv  remote_log.py  sdkconfig
API_Test/: API_Library.h  API_Test.ino
data/: config.json
main/: CMakeLists.txt  main.cpp
main/lib/FanControl/: FanControl.cpp  FanControl.h
main/lib/MAX31790/: MAX31790.cpp  MAX31790.h
main/lib/Misc/: Temperature.h  TinyWebServer.cpp  TinyWebServer.h  Utilities.h  WifiControl.h  Zone.h
main/lib/PID/: PID.cpp  PID.h  PIDEnhanced.h
main/lib/blufi/: blufi.cpp  blufi.h  blufi_security.c  blufi_security.cpp  blufi_security.h  blufi_wireless.c  blufi_wireless.cpp  blufi_wireless.h
main/lib/config/: config.cpp  config.h
main/lib/homekit/: homekit.c  homekit.h
main/lib/httpd/: httpd.cpp  httpd.h  httpd_static_files.h.in
main/lib/mqtt/: mqtt.cpp  mqtt.h
main/lib/ota/: ota.cpp  ota.h
main/lib/pid/: pid.cpp  pid.h  pid_enhanced.h
main/lib/pwm_control/: max31790.cpp  max31790.h  pwm_control.cpp  pwm_control.h
main/lib/util/: dispatcher.h  log.h  logger.h  temperature.h  utilities.h
main/lib/wifi_prov_mgr/: wifi_prov_mgr.cpp  wifi_prov_mgr.h
